// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check type checkbox 1`] = `
<label
  className="ola_check"
>
  <input
    className="ola_check-input"
    type="checkbox"
  />
  <div
    className="ola_check-label"
  >
    <div
      className="ola_check-label-content"
    >
      Accept terms
    </div>
  </div>
</label>
`;

exports[`Check type radio 1`] = `
<label
  className="ola_check"
>
  <input
    className="ola_check-input"
    type="radio"
  />
  <div
    className="ola_check-label"
  >
    <div
      className="ola_check-label-content"
    >
      Accept terms
    </div>
  </div>
</label>
`;

exports[`Default check is checkbox 1`] = `
<label
  className="ola_check"
>
  <input
    className="ola_check-input"
    type="checkbox"
  />
  <div
    className="ola_check-label"
  >
    <div
      className="ola_check-label-content"
    >
      Accept terms
    </div>
  </div>
</label>
`;
